objects/Handwrytten__hndwrtObjAccountContacts__c.object
<CustomObject>
    <fields>
        <fullName>Handwrytten__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Handwrytten Account Contacts</relationshipLabel>
        <relationshipName>Handwrytten_Account_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Handwrytten__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Handwrytten Account Contacts</relationshipLabel>
        <relationshipName>Handwrytten_Account_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Handwrytten__Handwrytten_Account__c</fullName>
        <label>Handwrytten Account</label>
        <referenceTo>Handwrytten__hndwrtObjAccount__c</referenceTo>
        <relationshipLabel>Handwrytten Account Contacts</relationshipLabel>
        <relationshipName>Handwrytten_Account_Contacts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Handwrytten__address_id__c</fullName>
        <description>Handwrytten Address Id</description>
        <label>address id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Handwrytten Account Contact</label>
    <nameField>
        <displayFormat>HndwrtAC-{00000000}</displayFormat>
        <label>Handwrytten Acnt Cnts Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Handwrytten Account Contacts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>